--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,11 +9,14 @@
   <h1>Dynamic Quote Generator</h1>
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
-
-  <h2>Add a new quote</h2>
-  <input type="text" id="newQuoteText" placeholder="Enter a new quote">
-  <input type="text" id="newQuoteCategory" placeholder="e.g happy, sad, motivational, funny">
-  <button id="addQuoteButton">Add Quote</button>
+  
+  <div>
+    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+    <button onclick="createAddQuoteForm()">Add Quote</button>
+      <button onclick="exportToJson()">Export Quotes</button>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
